manifests/istio-acme/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/part-of: istio-acme
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: nginx
      app.kubernetes.io/part-of: istio-acme
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: nginx
        app.kubernetes.io/part-of: istio-acme
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            port: 80
        livenessProbe:
          httpGet:
            port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/part-of: istio-acme
spec:
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/part-of: istio-acme
  ports:
  - name: http
    port: 8080
    targetPort: http
