manifests/istio-acme/ngrok.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok
  labels:
    app.kubernetes.io/name: ngrok
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: ngrok
    app.kubernetes.io/part-of: istio-acme
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ngrok
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: ngrok
      app.kubernetes.io/part-of: istio-acme
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ngrok
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: ngrok
        app.kubernetes.io/part-of: istio-acme
    spec:
      containers:
      - name: ngrok
        image: ngrok/ngrok:latest
        args:
        - start
        - --all
        - --config
        - /etc/ngrok/config.yaml
        - --authtoken
        - $(NGROK_AUTH_TOKEN)
        ports:
        - name: ngrok
          containerPort: 4040
        volumeMounts:
        - name: config
          mountPath: /etc/ngrok
        readinessProbe:
          httpGet:
            port: 4040
        livenessProbe:
          httpGet:
            port: 4040
      volumes:
      - name: config
        configMap:
          name: ngrok-config

---
apiVersion: v1
kind: Service
metadata:
  name: ngrok
  labels:
    app.kubernetes.io/name: ngrok
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: ngrok
    app.kubernetes.io/part-of: istio-acme
spec:
  selector:
    app.kubernetes.io/name: ngrok
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: ngrok
    app.kubernetes.io/part-of: istio-acme
  ports:
  - name: ngrok
    port: 4040
    targetPort: ngrok
