manifests/istio-acme/test-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - acme-test.example.com
    tls:
      mode: SIMPLE
      credentialName: acme-test-https-tls
