manifests/istio-acme/http-redirect.yaml
# This implements a route for HTTP-to-HTTPS redirect while allowing requests to
# an HTTPRoute created by cert-manager to solve ACME challenges.
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: default
  labels:
    app.kubernetes.io/name: http-route
    app.kubernetes.io/component: network
    app.kubernetes.io/instance: http-to-https-redirect
    app.kubernetes.io/part-of: istio-acme
spec:
  gateways:
    allow: All
  hostnames:
  - acme-test.example.com
  rules:
  - matches:
    - path:
        # Matches paths that don't start with '.'. Only
        # '/.well-known/acme-challenge' that will be used for ACME challenges
        # needs to be excluded, but just I couldn't find how to implement it in
        # RE2 syntax as path doesn't support 'not' match at the moment.
        type: RegularExpression
        value: ^(/|/[^.].*)$
    forwardTo:
    - serviceName: http-to-https-redirect
      port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-to-https-redirect
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: http-to-https-redirect
    app.kubernetes.io/part-of: istio-acme
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: http-to-https-redirect
      app.kubernetes.io/part-of: istio-acme
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: http-to-https-redirect
        app.kubernetes.io/part-of: istio-acme
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          tcpSocket: # httpGet doesn't work because of non-local redirect
            port: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-conf
        configMap:
          name: http-to-https-redirect-conf

---
apiVersion: v1
kind: Service
metadata:
  name: http-to-https-redirect
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: http-to-https-redirect
    app.kubernetes.io/part-of: istio-acme
spec:
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: http-to-https-redirect
    app.kubernetes.io/part-of: istio-acme
  ports:
  - name: http
    port: 8080
    targetPort: http
