manifests/istio-acme/test-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-virtualservice
spec:
  hosts:
  - acme-test.example.com
  gateways:
  - test-gateway
  http:
  - route:
    - destination:
        host: nginx
        port:
          number: 8080
